# probe-configurator-tauri

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
resources/icons/mac/: icon.icns
scripts/: gen_icon_png.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: download.rs  mod.rs  probe.rs
src-tauri/src/download/: http.rs  installer.rs  mod.rs  poll.rs  types.rs  webview.rs
src-tauri/src/jlink/: detect.rs  firmware.rs  mod.rs  nickname.rs  runner.rs  scan.rs  scripts.rs  types.rs  usb_driver.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/renderer/: App.tsx  styles.css
src/renderer/pages/: Dashboard.tsx  InstallJLink.tsx
src/renderer/store/: probeStore.ts
src/shared/: types.ts
